# ai-playground

./: .env.cloud.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE2.md  README.md  pyproject.toml
.claude/: .toolkit-manifest.json  settings.json  skill-use-debug.jsonl  skill-use-log.jsonl
.claude/agents/research-paper-analyst/: AGENT.md
.claude/commands/: parallel-research.md
.claude/hooks/: log_skill_use.py  research-retrospective-hook.py
.claude/hooks/autonomous-mode/: hooks.json
.claude/rules/: autonomous-mode.md  code-quality.md  general-rules.md  python-rules.md  quant-research.md  work-organization.md
.claude/skills/: create-tool.md  finance-experiment.md  quick-experiment.md  share-gist.md
.claude/skills/market-data-fetcher/: SKILL.md
.claude/skills/qrd/: SKILL.md
analytics-platform/: .gitignore  Makefile  README.md  pyproject.toml
analytics-platform/config/: platform.example.json
analytics-platform/sql/materializations/: features.sql  pnl.sql  portfolio_snapshot.sql  positions.sql
analytics-platform/sql/migrations/: 001_init.sql
analytics-platform/sql/views/: bronze_views.sql  silver_views.sql
analytics-platform/src/: __init__.py  cli.py  config.py
analytics-platform/src/backends/: __init__.py  base.py  duckdb.py  parquet.py  postgres.py
analytics-platform/src/pipelines/: __init__.py  base.py  export.py  ingestion.py  transformation.py
analytics-platform/src/schemas/: __init__.py  base.py  portfolio.py  prices.py  trades.py
analytics-platform/tests/: __init__.py  conftest.py  test_backends.py  test_pipelines.py  test_schemas.py
bankier-forum/: README.md  pyproject.toml
bankier-forum/config/: settings.yaml  tickers.json
bankier-forum/docs/: prd.md
bankier-forum/scripts/: __init__.py  run_scraper.py
bankier-forum/src/: __init__.py
bankier-forum/src/api/: __init__.py  main.py
bankier-forum/src/db/: __init__.py  models.py  repository.py
bankier-forum/src/nlp/: __init__.py  sentiment.py  ticker_detector.py
bankier-forum/src/scraper/: __init__.py  bankier_scraper.py  rate_limiter.py
bankier-forum/src/signals/: __init__.py  aggregator.py
bankier-forum/tests/: __init__.py  test_sentiment.py  test_ticker_detector.py
data/: .gitkeep
data/samples/: BTC-USD.csv  BTC_USD.csv  DBC.csv  EEM.csv  EFA.csv  FF5_factors.csv  FF_momentum.csv  FRED_CPIAUCSL.csv  FRED_DGS10.csv  FRED_DGS2.csv  FRED_FEDFUNDS.csv  FRED_GDP.csv  FRED_T10Y2Y.csv  FRED_UNRATE.csv  GLD.csv  IEF.csv  IWM.csv  QQQ.csv  README.md  SHY.csv  SPY.csv  TLT.csv  VIX.csv  VNQ.csv  WIG20.csv  XLB.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLRE.csv  XLU.csv  XLV.csv  XLY.csv
docs/: claude-code-web-setup.md
docs/memory/: decisions.md  issues.md  patterns.md
docs/prompts/: reverse-engineer-pal-strategies.md  reverse-enginner-price-strategy.md
jimek/: README.md  __init__.py  config.example.yaml  logging.py  pyproject.toml
jimek/cli/: __init__.py  main.py
jimek/config/: __init__.py  settings.py
jimek/core/: __init__.py  job.py  orchestrator.py  scheduler.py
jimek/notifications/: __init__.py  base.py  email.py  ntfy.py  slack.py  telegram.py  whatsapp.py
jimek/workflows/: __init__.py  luigi_tasks.py  pipeline.py
market_simulator/: .gitignore  main.py  pyproject.toml
market_simulator/src/market_simulator/: __init__.py
market_simulator/src/market_simulator/core/: __init__.py  models.py  simulation.py
market_simulator/src/market_simulator/correlation/: __init__.py  structures.py
market_simulator/src/market_simulator/forecasting/: __init__.py  returns.py
market_simulator/src/market_simulator/stress_testing/: __init__.py  scenarios.py
market_simulator/src/market_simulator/visualization/: __init__.py  plots.py
output/claude-reverse-engineer-strategies-ziZsY/: retrospective_20260205_180000.md  retrospective_20260205_182100.md
output/claudereverse-engineer-strategies-ziZsY/: inferred_rules_20260205_074852.md  priceactionlab_reverse_engineering_report.html  quant_research_QQQ_20260205_161736.md  quant_research_SPY_20260205_161730.md  strategy_research_retrospective_20260205.md
output/replicate-research-analysis-diwfF/: replication_report_20260205_174026.md
outputs/: .gitkeep  strategy_reverse_engineering_20260205_070859.md
quant-research/: .gitignore  README.md  main.py  pyproject.toml  test_beglobal.py
quant-research/config/: beglobal_mixed.yaml  mean_reversion.yaml  ml_prediction.yaml  multi_strategy.yaml  notebook_analysis.yaml  parameter_optimization.yaml  portfolio_optimization.yaml  sector_rotation.yaml  tech_momentum.yaml
quant-research/quant_research/: __init__.py  backtest.py  backtest_advanced.py  backtest_vectorized.py  beglobal_strategy.py  caching.py  data.py  indicators.py  ml_pipeline.py  notebook_pipeline.py  pipeline.py  portfolio.py  portfolio_advanced.py  reporting.py
quant-research/scripts/: run_pipeline.py
scripts/: download_factors_fred.py  download_quant_samples.py  setup-env.sh
shared/: __init__.py  indicators.py
tools/forum-rotation-signals/: README.md  main.py
tools/hello-world/: README.md  main.py
tools/pal-strategies/: README.md  __init__.py  b2s2etf.py  base.py  etfmr.py  mrmom.py  run_all.py
tools/pal_strategies/: __init__.py  b2s2etf.py  base.py  etfmr.py  mretf.py  mrmom.py
tools/replicate-research-analysis/: README.md  main.py
tools/strategy-reverse-engineer/: README.md  final_optimize.py  main.py  optimize.py  quick_optimize.py  test_yf.py
trading/: __init__.py  engine.py
trading/analytics/: __init__.py  performance.py  reconciliation.py
trading/config/: __init__.py  settings.py
trading/core/: __init__.py  enums.py  events.py  models.py
trading/examples/: __init__.py  basic_usage.py  config_crypto.yaml  config_equity.yaml  config_forex.yaml
trading/exchanges/: __init__.py  base.py  binance.py  bossa.py  interactive_brokers.py  oanda.py
trading/feeds/: __init__.py  base.py  history.py  live.py  replay.py
trading/simulator/: __init__.py  calibration.py  exchange.py  market_model.py
trading/strategy/: __init__.py  base.py  risk.py
(+20 files in other folders)
