[project]
name = "ai-playground"
version = "0.1.0"
description = "Quick experimentation repo for Python tools and ideas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "polars>=0.20",
    
    # HTTP/API
    "httpx>=0.25",
    "requests>=2.31",
    
    # CLI
    "typer>=0.9",
    "rich>=13.0",
    
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.18",
    
    # Utils
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
]
finance = [
    "yfinance>=0.2",
    "quantstats>=0.0.62",
    "empyrical>=0.5",
]
ml = [
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py", "*_test.py"]
