[project]
name = "ai-playground"
version = "0.1.0"
description = "Quick experimentation repo for Python tools and ideas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    
    # HTTP/API
    "httpx>=0.25",
    "requests>=2.31",

    # Web crawling
    "crawl4ai>=0.8",
    
    # CLI
    "typer>=0.9",
    "rich>=13.0",
    
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.18",
    
    # Utils
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
]
finance = [
    # Market data
    "yfinance>=0.2",
    # Performance & risk
    "quantstats>=0.0.62",
    "ffn>=0.3",
    # Backtesting
    "vectorbt>=0.26",
    # Portfolio optimization
    "cvxpy>=1.4",
    "riskfolio-lib>=5.0",
    # Volatility & econometrics
    "arch>=7.0",
    "statsmodels>=0.14",
    # Technical analysis
    "ta>=0.11",
]
ml = [
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "tools"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py", "*_test.py"]
