[project]
name = "quant-research"
version = "0.1.0"
description = "A Python quantitative finance research toolkit with data fetching, technical indicators, backtesting, and portfolio optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "yfinance>=1.0",
]
